[gd_scene load_steps=35 format=2]

[ext_resource path="res://Fonts/rexlia rg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Player/Sprites/Menu/IdleMenu.png" type="Texture" id=3]
[ext_resource path="res://Sprites/lightning-big.png" type="Texture" id=4]
[ext_resource path="res://BG/Blur.png" type="Texture" id=5]
[ext_resource path="res://Environment.tres" type="Environment" id=6]

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1920, 0, 1920, 1080 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3840, 0, 1920, 1080 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5760, 0, 1920, 1080 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 7680, 0, 1920, 1080 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1080, 1920, 1080 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1920, 1080, 1920, 1080 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3840, 1080, 1920, 1080 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5760, 1080, 1920, 1080 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 7680, 1080, 1920, 1080 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2160, 1920, 1080 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1920, 2160, 1920, 1080 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3840, 2160, 1920, 1080 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5760, 2160, 1920, 1080 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 7680, 2160, 1920, 1080 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3240, 1920, 1080 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1920, 3240, 1920, 1080 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3840, 3240, 1920, 1080 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5760, 3240, 1920, 1080 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 7680, 3240, 1920, 1080 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 4320, 1920, 1080 )

[sub_resource type="SpriteFrames" id=68]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "Idle",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.690196, 0.690196, 0.690196, 0.0941176 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.796078 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.368627, 0.388235, 0.384314, 0.588235 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -2

[node name="BG" type="TextureRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 287, 617 )
frames = SubResource( 68 )
animation = "Idle"
frame = 5
speed_scale = 0.5
playing = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 903.0
margin_top = 116.0
margin_right = 1903.0
margin_bottom = 416.0
custom_fonts/normal_font = SubResource( 6 )
text = "Lost Source
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1247.0
margin_top = 381.0
margin_right = 1747.0
margin_bottom = 931.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../Settings")
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 100 )
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Credits")
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 400.0
rect_min_size = Vector2( 500, 100 )
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 450.0
margin_right = 500.0
margin_bottom = 550.0
rect_min_size = Vector2( 500, 100 )
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Start")
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0.498039, 0.894118, 0.388235, 1 )
margin_left = 1073.0
margin_top = 48.0
margin_right = 1585.0
margin_bottom = 560.0
rect_rotation = 6.6
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
